--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@privy-io/react-auth": "^1.82.0",
+    "@privy-io/wagmi": "^0.2.12",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -23,6 +24,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@rainbow-me/rainbowkit": "^2.1.5",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/query-core": "^4.32.0",
     "@tanstack/react-query": "^4.32.0",
