--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,10 +56,24 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto": "npm:crypto-browserify",
+    "stream": "npm:stream-browserify",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "url": "^0.11.4",
+    "webpack": "^5.94.0"
   }
 }
