--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.2.1",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
@@ -60,7 +61,6 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "crypto": "npm:crypto-browserify",
-    "stream": "npm:stream-browserify",
     "crypto-browserify": "^3.12.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
@@ -69,6 +69,7 @@
     "path-browserify": "^1.0.1",
     "postcss": "^8",
     "process": "^0.11.10",
+    "stream": "npm:stream-browserify",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tailwindcss": "^3.4.1",
